Correct name alignment.

--- a/css/caarms.scss
+++ b/css/caarms.scss
@@ -308,3 +308,7 @@ flex-flow: column;
 		padding-left: 28%;
 	}
 }
+
+.view-session > .view-content > .views-row > .views-field.views-field-view {
+	width: 100%;
+}
